--- a/my_app/templates/show_docs.html
+++ b/my_app/templates/show_docs.html
@@ -3,147 +3,153 @@
 {% block content %}
 {{ super() }}
 
-<p>Содержимое страницы "Мои документы"</p>
-
 <div class="accordion" id="accordionTable">
     {% for doc in docs %}
     <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#{{ doc }}" aria-expanded="false" aria-controls="{{ doc }}">
-            {{ doc.invoice_date.strftime("%d-%b-%Y") }}
-        </button>
-      </h2>
-      <div id="{{ doc }}" class="accordion-collapse collapse" data-bs-parent="#accordionTable">
-        <div class="accordion-body">
-          <table id="table-accordion" class="table table-sm table-bordered">
-            <thead>
-                <tr>
-                    <th scope="col">Наименование услуги</th>
-                    <th scope="col">Единица измерения</th>
-                    <th scope="col">Количество/объем потребления</th>
-                    <th scope="col">Сумма</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="tr-common">
-                    <td>Обращение с ТКО</td>
-                    <td>м.куб</td>
-                    <td>{{ doc.tko }}</td>
-                    <td>{{ doc.invoice.tko }}</td>
-                </tr>
-                <tr class="tr-common">
-                    <td>Содержание жилья</td>
-                    <td>м.кв</td>
-                    <td>{{ doc.maintenance_common }}</td>
-                    <td>{{ doc.invoice.maintenance_common }}</td>
-                </tr>
-                <tr class="tr-common">
-                    <td>Водоотведение (общее)</td>
-                    <td>м.куб</td>
-                    <td>{{ doc.drainage_common }}</td>
-                    <td>{{ doc.invoice.drainage_common }}</td>
-                </tr>
-                <tr class="tr-common">
-                    <td>ХВС (общее)</td>
-                    <td>м.куб</td>
-                    <td>{{ doc.cold_water_common }}</td>
-                    <td>{{ doc.invoice.cold_water_common }}</td>
-                </tr>
-                <tr class="tr-common">
-                    <td>ГВС теплоноситель (общее)</td>
-                    <td>м.куб</td>
-                    <td>{{ doc.hot_water_volume_common }}</td>
-                    <td>{{ doc.invoice.hot_water_volume_common }}</td>
-                </tr>
-                <tr class="tr-common">
-                    <td>ГВС тепловая энергия (общее)</td>
-                    <td>Гкал</td>
-                    <td>{{ doc.hot_water_energy_common }}</td>
-                    <td>{{ doc.invoice.hot_water_energy_common }}</td>
-                </tr>
-                <tr class="tr-common">
-                    <td>Электроэнергия (общее)</td>
-                    <td>кВт.ч</td>
-                    <td>{{ doc.electricity_common }}</td>
-                    <td>{{ doc.invoice.electricity_common }}</td>
-                </tr>
-                <tr class="tr-variable">
-                    <td>Отопление</td>
-                    <td>Гкал</td>
-                    <td>{{ doc.heating }}</td>
-                    <td>{{ doc.invoice.heating }}</td>
-                </tr>
-                <tr class="tr-variable">
-                    <td>ГВС теплоноситель</td>
-                    <td>м.куб</td>
-                    <td>{{ doc.hot_water_volume }}</td>
-                    <td>{{ doc.invoice.hot_water_volume }}</td>
-                </tr>
-                <tr class="tr-variable">
-                    <td>ГВС тепловая энергия</td>
-                    <td>Гкал</td>
-                    <td>{{ doc.hot_water_energy }}</td>
-                    <td>{{ doc.invoice.hot_water_energy }}</td>
-                </tr>
-                <tr class="tr-variable">
-                    <td>ХВС</td>
-                    <td>м.кв</td>
-                    <td>{{ doc.cold_water }}</td>
-                    <td>{{ doc.invoice.cold_water }}</td>
-                </tr>
-                <tr class="tr-variable">
-                    <td>Водоотведение</td>
-                    <td>м.куб</td>
-                    <td>{{ doc.drainage }}</td>
-                    <td>{{ doc.invoice.drainage }}</td>
-                </tr>
-                <tr class="tr-variable">
-                    <td>Электроэнергия</td>
-                    <td>кВт.ч</td>
-                    <td>{{ doc.electricity }}</td>
-                    <td>{{ doc.invoice.electricity }}</td>
-                </tr>
-                <tr class="tr-variable">
-                    <td>Газоснабжение</td>
-                    <td>м.куб</td>
-                    <td>{{ doc.gas }}</td>
-                    <td>{{ doc.invoice.gas }}</td>
-                </tr>
-                <tr class="tr-common last">
-                    <td>Взнос на кап. ремонт</td>
-                    <td>м.кв</td>
-                    <td>{{ doc.renovation }}</td>
-                    <td>{{ doc.invoice.renovation }}</td>
-                </tr>
-            </tbody>
-            <tfoot class="table-group-divider">
-                <tr>
-                    <td colspan="2"></td>
-                    <td class="total-common">Итого по зеленым зонам</td>
-                    <td class="total-common">{{ doc.invoice.common_total }}</td>
-                </tr>
-                <tr>
-                    <td colspan="2"></td>
-                    <td class="total-variable">Итого по оранжевым зонам</td>
-                    <td class="total-variable">{{ doc.invoice.variable_total }}</td>
-                </tr>
-                <tr>
-                    <td colspan="2"></td>
-                    <td class="total-recalculation">Итого перерасчет</td>
-                    <td class="total-recalculation">{{ doc.invoice.recalculation }}</td>
-                </tr>
-                <tr>
-                    <td colspan="2"></td>
-                    <td class="total">Итого</td>
-                    <td class="total">{{ doc.invoice.total }}</td>
-                </tr>
+        <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#{{ doc }}"
+                aria-expanded="false" aria-controls="{{ doc }}">
+                {{ doc.invoice_date.strftime("%d-%b-%Y") }}
+            </button>
+        </h2>
+        <div id="{{ doc }}" class="accordion-collapse collapse" data-bs-parent="#accordionTable">
+            <div class="accordion-body">
+                <table id="table-accordion" class="table table-sm table-bordered">
+                    <thead>
+                        <tr>
+                            <th scope="col">Наименование услуги</th>
+                            <th scope="col">Единица измерения</th>
+                            <th scope="col">Количество/объем потребления</th>
+                            <th scope="col">Сумма</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="tr-common">
+                            <td>Обращение с ТКО</td>
+                            <td>м.куб</td>
+                            <td>{{ doc.tko }}</td>
+                            <td>{{ doc.invoice.tko }}</td>
+                        </tr>
+                        <tr class="tr-common">
+                            <td>Содержание жилья</td>
+                            <td>м.кв</td>
+                            <td>{{ doc.maintenance_common }}</td>
+                            <td>{{ doc.invoice.maintenance_common }}</td>
+                        </tr>
+                        <tr class="tr-common">
+                            <td>Водоотведение (общее)</td>
+                            <td>м.куб</td>
+                            <td>{{ doc.drainage_common }}</td>
+                            <td>{{ doc.invoice.drainage_common }}</td>
+                        </tr>
+                        <tr class="tr-common">
+                            <td>ХВС (общее)</td>
+                            <td>м.куб</td>
+                            <td>{{ doc.cold_water_common }}</td>
+                            <td>{{ doc.invoice.cold_water_common }}</td>
+                        </tr>
+                        <tr class="tr-common">
+                            <td>ГВС теплоноситель (общее)</td>
+                            <td>м.куб</td>
+                            <td>{{ doc.hot_water_volume_common }}</td>
+                            <td>{{ doc.invoice.hot_water_volume_common }}</td>
+                        </tr>
+                        <tr class="tr-common">
+                            <td>ГВС тепловая энергия (общее)</td>
+                            <td>Гкал</td>
+                            <td>{{ doc.hot_water_energy_common }}</td>
+                            <td>{{ doc.invoice.hot_water_energy_common }}</td>
+                        </tr>
+                        <tr class="tr-common">
+                            <td>Электроэнергия (общее)</td>
+                            <td>кВт.ч</td>
+                            <td>{{ doc.electricity_common }}</td>
+                            <td>{{ doc.invoice.electricity_common }}</td>
+                        </tr>
+                        <tr class="tr-variable">
+                            <td>Отопление</td>
+                            <td>Гкал</td>
+                            <td>{{ doc.heating }}</td>
+                            <td>{{ doc.invoice.heating }}</td>
+                        </tr>
+                        <tr class="tr-variable">
+                            <td>ГВС теплоноситель</td>
+                            <td>м.куб</td>
+                            <td>{{ doc.hot_water_volume }}</td>
+                            <td>{{ doc.invoice.hot_water_volume }}</td>
+                        </tr>
+                        <tr class="tr-variable">
+                            <td>ГВС тепловая энергия</td>
+                            <td>Гкал</td>
+                            <td>{{ doc.hot_water_energy }}</td>
+                            <td>{{ doc.invoice.hot_water_energy }}</td>
+                        </tr>
+                        <tr class="tr-variable">
+                            <td>ХВС</td>
+                            <td>м.кв</td>
+                            <td>{{ doc.cold_water }}</td>
+                            <td>{{ doc.invoice.cold_water }}</td>
+                        </tr>
+                        <tr class="tr-variable">
+                            <td>Водоотведение</td>
+                            <td>м.куб</td>
+                            <td>{{ doc.drainage }}</td>
+                            <td>{{ doc.invoice.drainage }}</td>
+                        </tr>
+                        <tr class="tr-variable">
+                            <td>Электроэнергия</td>
+                            <td>кВт.ч</td>
+                            <td>{{ doc.electricity }}</td>
+                            <td>{{ doc.invoice.electricity }}</td>
+                        </tr>
+                        <tr class="tr-variable">
+                            <td>Газоснабжение</td>
+                            <td>м.куб</td>
+                            <td>{{ doc.gas }}</td>
+                            <td>{{ doc.invoice.gas }}</td>
+                        </tr>
+                        <tr class="tr-common last">
+                            <td>Взнос на кап. ремонт</td>
+                            <td>м.кв</td>
+                            <td>{{ doc.renovation }}</td>
+                            <td>{{ doc.invoice.renovation }}</td>
+                        </tr>
+                    </tbody>
+                    <tfoot class="table-group-divider">
+                        <tr>
+                            <td colspan="2"></td>
+                            <td class="total-common">Итого по зеленым зонам</td>
+                            <td class="total-common">{{ doc.invoice.common_total }}</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"></td>
+                            <td class="total-variable">Итого по оранжевым зонам</td>
+                            <td class="total-variable">{{ doc.invoice.variable_total }}</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"></td>
+                            <td class="total-recalculation">Итого перерасчет</td>
+                            <td class="total-recalculation">{{ doc.invoice.recalculation }}</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"></td>
+                            <td class="total">Итого</td>
+                            <td class="total">{{ doc.invoice.total }}</td>
+                        </tr>
 
-            </tfoot>
-          </table>
+                    </tfoot>
+                </table>
+            </div>
         </div>
-      </div>
     </div>
     {% endfor %}
-  </div>
+</div>
+
+
+{% if paginate_obj.pages > 1 %}
+
+{% include 'includes/pagination.html' %}
+
+{% endif %}
 
 {% endblock %}
